--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "type": "module",
   "description": "Browser-based artillery game inspired by Dome Wars",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client": "vite",
+    "server": "tsx watch server/index.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx"
   },
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.8.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.50.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   }
