--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "tsx": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -23,7 +24,6 @@
     "@typescript-eslint/parser": "^6.7.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.50.0",
-    "tsx": "^4.7.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   }
